--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ hoidanit.jwt.base64-secret=qoAEABDke07+AVLepXB4aCMtsT0wMAqR5x2VFyldsnx6e75YQkJH2
 hoidanit.jwt.token-validity-in-seconds=8640000
 ###
 
+###
+# setup page bat dau tu 1
+spring.data.web.pageable.one-indexed-parameters=true
+###
 #config upload file
 ###
 # #default = 1MB
