--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,16 @@ spring.data.web.pageable.one-indexed-parameters=true
 #config upload file
 ###
 # #default = 1MB
-# spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-file-size=50MB
 
 # #default = 10 MB (form data)
-# spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+###
+
+
+###
+#Base path
+hoidanit.upload-file.base-path=file:///D:/Hunter-job/upload/
 ###
 
 
