--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,5 @@ spring.servlet.multipart.max-request-size=50MB
 
 ###
 #Base path
-hoidanit.upload-file.base-path=file:///D:/Hunter-job/upload/
+hoidanit.upload-file.base-uri=file:///D:/Hunter-job/upload/
 ###
-
-
