--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,14 @@ spring.servlet.multipart.max-request-size=50MB
 #Base path
 hoidanit.upload-file.base-uri=file:///D:/Hunter-job/upload/
 ###
+
+
+###
+#config email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hoangbn967@gmail.com
+spring.mail.password=eaxelkdfmkkqofwg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+###
